--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@auth0/nextjs-auth0": "^3.8.0",
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.0",
+    "gantt-task-react": "^0.3.9",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.25",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.344.0"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
@@ -28,4 +29,3 @@
     "typescript": "^5.3.3"
   }
 }
-
