--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.8.0",
     "@google/generative-ai": "^0.21.0",
+    "@headlessui/react": "^2.2.9",
     "@supabase/supabase-js": "^2.39.0",
     "gantt-task-react": "^0.3.9",
     "lucide-react": "^0.344.0",
